<resources>
    <string name="app_name">Dok Su</string>
    <string name="dok_su_icon">Dok Su Icon</string>
    <string name="icon">Icon</string>
    <string name="tmk_logo">TMK Logo</string>
    <string name="doksu_song_shan">ၽဵင်းၵႂၢမ်းတုၵ်းသူး</string>
    <string name="about_us_shan">လွင်ႈၽူႈၶူင်သၢင်ႈ</string>
    <string name="we_are_tmk_group">We are TMK Group</string>
    <string name="song_by">Song By</string>
    <string name="contact_email">Contact by E-mail</string>
    <string name="app_version">Version 2.2.1</string>
    <string name="rate_playstore">Rate this app on Play Store</string>
    <string name="contact_facebook">Contact us by Facebook</string>
    <string name="time_start">00:00</string>
    <string name="show_guitar_chord">ၼႄၶွတ်ႇတိင်ႇ</string>
    <string name="play_doksu_song">ၽုၺ်ႇသဵင်ၵႂၢမ်း</string>
    <string name="previous">Previous</string>
    <string name="play_or_pause">PlayOrPause</string>
    <string name="next">Next</string>
</resources>